--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,41 @@ build
 
 services/graph-node/data
 hardhat/src
+hardhat/data/abi/AccessControl.json
+hardhat/data/abi/ERC1155.json
+hardhat/data/abi/ERC1155Burnable.json
+hardhat/data/abi/IKittyPartyWinnerStrategy.json
+hardhat/scripts/createKitty.ts
+hardhat/data/abi/OwnableUpgradeable.json
+hardhat/data/abi/Pausable.json
+hardhat/data/abi/KittyPartyYieldGeneratorZapper.json
+hardhat/data/abi/KittyPartyYieldGeneratorAave.json
+hardhat/data/abi/KittyPartyWinnerSelectionOptions.json
+hardhat/data/abi/KittyPartyWinnerDistributeEqual.json
+hardhat/data/abi/KittyPartyTreasury.json
+hardhat/data/abi/KittyPartyToken.json
+hardhat/data/abi/KittyPartyStateTransitionKeeper.json
+hardhat/data/abi/KittyPartyStateTransition.json
+hardhat/data/abi/KittyPartyFactory.json
+hardhat/data/abi/KittyPartyController.json
+hardhat/data/abi/KittyPartyAccountant.json
+hardhat/data/abi/Kittens.json
+hardhat/data/abi/KeeperCompatibleInterface.json
+hardhat/data/abi/IKittyPartyYieldGenerator.json
+hardhat/data/abi/IERC20Upgradeable.json
+hardhat/data/abi/IERC20Permit.json
+hardhat/data/abi/IERC20Metadata.json
+hardhat/data/abi/IERC20.json
+hardhat/data/abi/IERC165.json
+hardhat/data/abi/IERC1155Receiver.json
+hardhat/data/abi/IERC1155MetadataURI.json
+hardhat/data/abi/IERC1155.json
+hardhat/data/abi/IAccessControl.json
+hardhat/data/abi/ERC20Permit.json
+hardhat/data/abi/ERC20Capped.json
+hardhat/data/abi/ERC20.json
+hardhat/data/abi/ERC20Burnable.json
+hardhat/data/abi/ERC165.json
+hardhat/data/abi/ERC1155Burnable.json
+hardhat/data/abi/ERC1155.json
+hardhat/data/abi/AccessControl.json
